crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__year__error__error_empty.snap
---
source: crates/tools/cron/src/tests/unit/year.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "",
                    Digit,
                ),
                Nom(
                    "",
                    Alt,
                ),
            ],
        },
    ),
)
