crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__year__error__error_greater_than_2199.snap
---
source: crates/tools/cron/src/tests/unit/year.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Year(
                    YearGreaterThan2199,
                ),
                Nom(
                    "2200",
                    MapRes,
                ),
                Nom(
                    "2200",
                    Alt,
                ),
            ],
        },
    ),
)
