crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__year__error__error_invalid_periodic.snap
---
source: crates/tools/cron/src/tests/unit/year.rs
expression: result
---
Err(
    Failure(
        Error {
            inner: [
                Year(
                    PeriodicLessThanOne,
                ),
                Nom(
                    "0",
                    MapRes,
                ),
            ],
        },
    ),
)
