crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__year__error__error_invalid_range.snap
---
source: crates/tools/cron/src/tests/unit/year.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Year(
                    RangeLessThanStart,
                ),
                Nom(
                    "2024-2022",
                    MapRes,
                ),
                Nom(
                    "2024-2022",
                    Alt,
                ),
            ],
        },
    ),
)
