crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__year__error__error_less_than_1970.snap
---
source: crates/tools/cron/src/tests/unit/year.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Year(
                    YearLessThan1970,
                ),
                Nom(
                    "1969",
                    MapRes,
                ),
                Nom(
                    "1969",
                    Alt,
                ),
            ],
        },
    ),
)
